--- a/Visualisation/QT/mainwindow.ui
+++ b/Visualisation/QT/mainwindow.ui
@@ -422,6 +422,7 @@
      <string>TP1bis</string>
     </property>
     <addaction name="actionFiltre_adaptatif"/>
+    <addaction name="actionInversion_Histo"/>
    </widget>
    <addaction name="menuFichier"/>
    <addaction name="menu_dition"/>
@@ -573,6 +574,11 @@
   <action name="actionFiltre_adaptatif">
    <property name="text">
     <string>Filtre adaptatif</string>
+   </property>
+  </action>
+  <action name="actionInversion_Histo">
+   <property name="text">
+    <string>Inversion Histo</string>
    </property>
   </action>
  </widget>
