--- a/Visualisation/QT/mainwindow.ui
+++ b/Visualisation/QT/mainwindow.ui
@@ -326,7 +326,7 @@
      <x>0</x>
      <y>0</y>
      <width>688</width>
-     <height>27</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFichier">
@@ -423,7 +423,7 @@
     </property>
     <addaction name="actionFiltre_adaptatif"/>
     <addaction name="actionInversion_Histo"/>
-    <addaction name="actionModule_Gradient"/>
+    <addaction name="actionK_Means"/>
    </widget>
    <widget class="QMenu" name="menuTP3">
     <property name="title">
@@ -634,6 +634,11 @@
   <action name="actionNegatif">
    <property name="text">
     <string>Negatif</string>
+   </property>
+  </action>
+  <action name="actionK_Means">
+   <property name="text">
+    <string>K-Means</string>
    </property>
   </action>
  </widget>
